[metadata]
name = timestamp-inspect
version = 0.0.1
author = mkh
author_email = m.khomutov@list.ru
description = Console utility to inspect video stream timestamp flow
long_description = file: README.md
license = MIT
platforms = any
url = https://github.com/m-khomutov/tsinspect
classifiers =
    Programming Language :: Python :: 3.7
    Operating System :: OS Independent

[options]
zip_safe = False
packages = timestampinspect.display, timestampinspect.protocols
include_package_data = True
package-dir =
    =src
install_requires =
    npyscreen
    pycrypto

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    tsinspect = timestampinspect.display.application:run
